2012-06-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): In
	XEmacs, there is no standard-value for `temporary-file-directory'.

2012-06-22  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in (EM): Use "-no-autoloads" instead of "-vanilla" in
	case of XEmacs.  Suggested by Steve Youngs <steve@sxemacs.org>.

	* tramp.el (tramp-drop-volume-letter): Provide an XEmacs
	compatible declaration.

	* tramp-compat.el (top): Require packages, which aren't autoloaded
	anymore for XEmacs.  Protect call of `tramp-file-name-handler' by
	`tramp-compat-funcall', pacifying the compiler.

	* tramp-efs.el (package-get-download-sites): Declare.

2012-06-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cmds.el (tramp-append-tramp-buffers): Protect
	`list-load-path-shadows' call.

	* tramp-efs.el (top): Autoload only settings for `tramp-methods'
	and `tramp-default-method-alist'.

2012-06-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (top): Do not require tramp-util.el and
	tramp-vc.el anymore, it hurts at least for SXEmacs.

	* tramp-sh.el (tramp-maybe-open-connection): Check also whether
	`non-essential' is bound.

2012-06-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Catch 'non-essential.

	* tramp-sh.el (tramp-maybe-open-connection): Throw if
	`non-essential' is non-nil.

2012-06-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): Avoid
	infloop.

2012-06-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (tramp-compat-temporary-file-directory): Ensure,
	that the temp directory is local.

	* tramp-sh.el (tramp-sh-handle-write-region): Let-bind
	`temporary-file-directory'.

2012-06-03  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.2.5 released.

	* tramp-compat.el (tramp-compat-condition-case-unless-debug): New
	defmacro.

	* tramp.el (tramp-file-name-handler): Use it.
