@@ -1,3 +1,9 @@
+2012-07-01  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-sh.el (tramp-sh-handle-vc-registered): Hide errors.
+	(tramp-vc-file-name-handler): Use dummy results for `process-file'
+	and `start-file-process'.
+
 2012-06-26  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-compat.el (tramp-compat-temporary-file-directory): In
